--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,6 +38,16 @@
   }
 }
 
+@keyframes custom-bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-0.5em);
+  }
+}
+
 .animate-scroll-left {
   animation-name: scroll-left;
 }
